--- a/td2/td2.tex
+++ b/td2/td2.tex
@@ -188,7 +188,7 @@ Soit $f\in L^1(\R^d)$. La \defi{transformée de Fourier} de $f$ est la fonction
 \end{enumerate}
 }
 
-\exo{ Soient $X$ et $Y$ deux espaces métriques, $Y$ complet. Soient $X_0$ un sous-ensemble dense de $X$ et $f:X_0\to \subset Y$ une application uniformément continue.
+\exo{ Soient $X$ et $Y$ deux espaces métriques, $Y$ complet. Soient $X_0$ un sous-ensemble dense de $X$ et $f:X_0\to Y$ une application uniformément continue.
 \begin{enumerate}
     \item Montrer que l'application $f$ se prolonge en une unique fonction uniformément continue $\tilde f:X\to Y$.
     \item Montrer que si $f(X_0)$ est un sous-ensemble dense de $Y$, alors $\tilde f$ est surjective de $X$ dans $Y$.
