--- a/td2/td2.tex
+++ b/td2/td2.tex
@@ -165,7 +165,7 @@ Soit $f\in L^1(\R^d)$. La \defi{transformée de Fourier} de $f$ est la fonction
 }
 
 \exo{
-  Soit $f\in L^1(\R)$ et $\alpha\in \R$. Montrer que la fonction $\varphi(t)=\hat f(t)\cos(\alpha t)$ est la transformée de Fourier d'une fonction de $L^1(\R)$ que l'on explicitera en fonction de $f$ et $\alpha$. Même question pour $\psi(t)=\hat f(t)\cos(\alpha t)$.
+  Soit $f\in L^1(\R)$ et $\alpha\in \R$. Montrer que la fonction $\varphi(t)=\hat f(t)\cos(\alpha t)$ est la transformée de Fourier d'une fonction de $L^1(\R)$ que l'on explicitera en fonction de $f$ et $\alpha$. Même question pour $\psi(t)=\hat f(t)\sin(\alpha t)$.
 }
 
 \exo{
