--- a/td3/td3.tex
+++ b/td3/td3.tex
@@ -153,9 +153,9 @@ avec $\binom{\alpha}{\beta}=\frac{\alpha !}{\beta !(\alpha-\beta)!}$, $\alpha !=
 }
 
 \exo{
-  Soit $a>0$. Pour tout $x\in \R$, on pose $g_a(x)=e^{-\frac{a }{2}\xi^2}$. Montrer que $g_a\in \mathcal S(\R)$ et que sa transformée de Fourier est donnée par
+  Soit $a>0$. Pour tout $x\in \R$, on pose $g_a(x)=e^{-\frac{a }{2}x^2}$. Montrer que $g_a\in \mathcal S(\R)$ et que sa transformée de Fourier est donnée par
   \begin{equation*}
-    \mathcal F g_a(\xi)= \frac{1}{\sqrt{a}}e^{-\frac{x^2}{2a}}
+    \mathcal F g_a(\xi)= \frac{1}{\sqrt{a}}e^{-\frac{\xi^2}{2a}}
   \end{equation*}
   pour tout $\xi\in \R$. 
   
